--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://BashchakYevhen.github.io/goit-react-hw-06-phonebook/",
+  "homepage": "https://BashchakYevhen.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.0.0",
     "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
@@ -15,7 +16,6 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3"
